@@ -7,15 +7,22 @@ SCRIPT_LOGGING_LEVEL=INFO
 # 
 LogDir="/tmp/florr/"
 LogFile="$LogDir""florr.log"
-
+TmpDir="$LogDir"
 
 ##### Variables of afk-check-clicker ###########
 ##
 
-CalibrationFile="$LogDir/calibration.png"
-TmpScrFile="$LogDir/test-ocr.png"
-TmpBWScrFile="$LogDir/test-ocr-bw.png"
+CalibrationFile="$TmpDir""calibration.png"   # destination file
+TmpScrFile="$TmpDir""scrAFKcheckClicker.png"
+TmpBWScrFile="$TmpDir""scrAFKcheckClicker-bw.png"
 
+# How many last screenshots will be saved in $TmpDir. Useful for debug.
+acc_ScrDepth=20 
+
+# How often takes a screenshots.
+sleeptime=10
+
+# 1920x1080
 resolutOffsetW=60
 resolutOffsetH=90
 w_rndm_max=20
@@ -23,3 +30,27 @@ h_rndm_max=3
 
 WindowName="florr.io – Chromium"
 work_with_windows=true
+
+##### Variables of clicker.sh ###########
+##
+
+ClkTmpScrFile="$TmpDir""scraaafk-clicker.png"
+
+
+##### Variables of spawn-tracker ###########
+##
+
+SpawnLogFile="$LogDir""mobs_spawn.log"  # Only for messages about spawntime. Not for debug.
+
+SptTmpScrFile="$TmpDir""aaafk_spawn.png"
+SptTmpBWScrFile1="$TmpDir""aaafk_spawn_bw1.png"
+SptTmpBWScrFile2="$TmpDir""aaafk_spawn_bw2.png"
+SptTmpScrFile1="$TmpDir""aaafk_spawn_tmp1.png" # Remove later. See the line 64 in spawn-tracker.sh
+SptTmpScrFile2="$TmpDir""aaafk_spawn_tmp2.png" # Remove later. See the line 81 in spawn-tracker.sh
+SptTmpOCRfile="$TmpDir""aaafk_spawn_ocr.txt"
+
+##### Variables of run-clicker #################
+##
+
+runclick_keycode=11      # 11 is key '2'
+runclick_sleeptime=0.1
